--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "dayjs": "^1.10.5",
     "element-ui": "^2.4.5",
     "js-cookie": "^2.2.1",
     "normalize.css": "^8.0.1",
