--- a/eMock/package.json
+++ b/eMock/package.json
@@ -4,10 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --watch index --watch controller.js --watch global.js --watch ./controllers/*",
+    "dev": "nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "port": "8888",
+  "author": "fxss",
   "license": "ISC",
   "dependencies": {
     "blueimp-md5": "^2.18.0",
